Fix truncate long section names in the grid - #33.

--- a/styles.css
+++ b/styles.css
@@ -121,11 +121,12 @@ div#gridmiddle-column > ul {
 }
 .course-content ul.gridicons li p.icon_content {
     font-weight: bold;
-    margin: 0;
-    white-space: nowrap;
-    overflow: hidden;
     height: 20px;
+    margin: 0;
+    overflow: hidden;
     text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .course-content ul.gridicons li .image_holder {
     overflow: hidden;
